--- a/src/styles_Club/css/main.css
+++ b/src/styles_Club/css/main.css
@@ -7,7 +7,7 @@
 
 :root {
   --color-default: #364d59;
-  --color-primary: #feb900;
+  --color-primary: #77bbfd;
   --color-secondary: #52565e;
 }
 
