--- a/src/app/administration/collection/collection-index/collection-index.component.html
+++ b/src/app/administration/collection/collection-index/collection-index.component.html
@@ -24,14 +24,17 @@
                 <div class="card-body">
                     <form [formGroup]="search_form">
                         <div class="row">
-                            <div class="col-sm-12 col-md-4">
-                                <div class="form-group">
-                                    <label>{{ "ADMINISTRATION.COLLECTION.COLLECTION" | translate }}</label>
-                                    <input type="number" formControlName="crecibo" class="form-control" [ngClass]="{ 'is-invalid' : submitted && search_form.get('crecibo').errors }">
-                                    <div *ngIf="submitted && search_form.get('crecibo').errors"  class="invalid-feedback">
-                                    </div>
+                          <div class="col-sm-12 col-md-4">
+                            <div class="form-group">
+                                <label>Placa</label>
+                                <select formControlName="xplaca" class="form-control" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xplaca').errors }">
+                                    <option></option>
+                                    <option *ngFor="let plate of plateList" value="{{ plate.id }}">{{ plate.value }}</option>
+                                </select>
+                                <div *ngIf="submitted && search_form.get('xplaca').errors"  class="invalid-feedback">
                                 </div>
                             </div>
+                        </div>
                         </div>
                     </form>
                 </div>
@@ -51,12 +54,14 @@
                 <div class="card-body">
                     <div class="container">
                         <ag-grid-angular style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="collectionList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" (rowClicked)="rowClicked($event)">
-                            <ag-grid-column headerName="Código" field="crecibo" [width]="200" [sortable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Lote" field="clote" [width]="200" [sortable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Código" field="crecibo" [width]="100" [sortable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Lote" field="clote" [width]="100" [sortable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Propietario" field="xnombrepropietario" [width]="200" [sortable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Fecha Desde" field="fdesde_pol" [width]="200" [sortable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Fecha Hasta" field="fhasta_pol" [width]="200" [sortable]="true"></ag-grid-column>
-                            <ag-grid-column headerName="Estatus" field="xestatusgeneral" [width]="200" [sortable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Fecha Desde" field="fdesde_pol" [width]="150" [sortable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Fecha Hasta" field="fhasta_pol" [width]="150" [sortable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Prima Pendiente" field="mprima_anual" [width]="150" [sortable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Placa" field="xplaca" [width]="200" [sortable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Estatus" field="xestatusgeneral" [width]="150" [sortable]="true"></ag-grid-column>
                         </ag-grid-angular>
                     </div>
                 </div>
