--- a/src/app/administration/collection/collection-detail/collection-detail.component.html
+++ b/src/app/administration/collection/collection-detail/collection-detail.component.html
@@ -26,26 +26,44 @@
                         <div class="row">
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
-                                    <label>{{ "ADMINISTRATION.COLLECTION.NAME" | translate }}</label>
-                                    <input type="text" formControlName="xnombrepropietario" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('xnombrepropietario').errors }">
-                                    <div *ngIf="submitted && detail_form.get('xnombrepropietario').errors"  class="invalid-feedback">
-                                        <div *ngIf="detail_form.get('xnombrepropietario').errors.required">{{ "CONFIGURATION.TAXESCONFIGURATION.REQUIREDNAME" | translate }}</div>
+                                    <label>{{ "ADMINISTRATION.COLLECTION.CLIENT" | translate }}</label>
+                                    <input type="text" formControlName="xcliente" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('xcliente').errors }">
+                                    <div *ngIf="submitted && detail_form.get('xcliente').errors"  class="invalid-feedback">
+                                        <div *ngIf="detail_form.get('xcliente').errors.required">{{ "CONFIGURATION.TAXESCONFIGURATION.REQUIREDNAME" | translate }}</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
-                                    <label>{{ "ADMINISTRATION.COLLECTION.LASTNAME" | translate }}</label>
-                                    <input type="text" formControlName="xapellidopropietario" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('xapellidopropietario').errors }">
-                                    <div *ngIf="submitted && detail_form.get('xapellidopropietario').errors"  class="invalid-feedback">
-                                        <div *ngIf="detail_form.get('xapellidopropietario').errors.required">{{ "CONFIGURATION.TAXESCONFIGURATION.REQUIREDNAME" | translate }}</div>
+                                    <label>{{ "ADMINISTRATION.COLLECTION.DOCUMENTSIDENTIFICATIONCLIENT" | translate }}</label>
+                                    <input type="text" formControlName="xdocidentidadcliente" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('xdocidentidadcliente').errors }">
+                                    <div *ngIf="submitted && detail_form.get('xdocidentidadcliente').errors"  class="invalid-feedback">
+                                        <div *ngIf="detail_form.get('xdocidentidadcliente').errors.required">{{ "CONFIGURATION.TAXESCONFIGURATION.REQUIREDNAME" | translate }}</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-4">
+                                <div class="form-group">
+                                    <label>{{ "ADMINISTRATION.COLLECTION.EMAIL" | translate }}</label>
+                                    <input type="text" formControlName="xemail" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('xemail').errors }">
+                                    <div *ngIf="submitted && detail_form.get('xemail').errors"  class="invalid-feedback">
+                                        <div *ngIf="detail_form.get('xemail').errors.required">{{ "CONFIGURATION.TAXESCONFIGURATION.REQUIREDNAME" | translate }}</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-4">
+                                <div class="form-group">
+                                    <label>{{ "ADMINISTRATION.COLLECTION.PHONE" | translate }}</label>
+                                    <input type="text" formControlName="xtelefono" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('xtelefono').errors }">
+                                    <div *ngIf="submitted && detail_form.get('xtelefono').errors"  class="invalid-feedback">
+                                        <div *ngIf="detail_form.get('xtelefono').errors.required">{{ "CONFIGURATION.TAXESCONFIGURATION.REQUIREDNAME" | translate }}</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
                                     <label>{{ "ADMINISTRATION.COLLECTION.STARDATE" | translate }}</label>
-                                    <input type="text" formControlName="fdesde_pol" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('fdesde_pol').errors }">
+                                    <input type="date" formControlName="fdesde_pol" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('fdesde_pol').errors }">
                                     <div *ngIf="submitted && detail_form.get('fdesde_pol').errors"  class="invalid-feedback">
                                         <div *ngIf="detail_form.get('fdesde_pol').errors.required">{{ "CONFIGURATION.TAXESCONFIGURATION.REQUIREDNAME" | translate }}</div>
                                     </div>
@@ -54,18 +72,9 @@
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
                                     <label>{{ "ADMINISTRATION.COLLECTION.FINALDATE" | translate }}</label>
-                                    <input type="text" formControlName="fhasta_pol" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('fhasta_pol').errors }">
+                                    <input type="date" formControlName="fhasta_pol" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('fhasta_pol').errors }">
                                     <div *ngIf="submitted && detail_form.get('fhasta_pol').errors"  class="invalid-feedback">
                                         <div *ngIf="detail_form.get('fhasta_pol').errors.required">{{ "CONFIGURATION.TAXESCONFIGURATION.REQUIREDNAME" | translate }}</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-12 col-md-4">
-                                <div class="form-group">
-                                    <label>{{ "ADMINISTRATION.COLLECTION.DOCUMENTSIDENTIFICATION" | translate }}</label>
-                                    <input type="text" formControlName="xdocidentidad" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('xdocidentidad').errors }">
-                                    <div *ngIf="submitted && detail_form.get('xdocidentidad').errors"  class="invalid-feedback">
-                                        <div *ngIf="detail_form.get('xdocidentidad').errors.required">{{ "CONFIGURATION.TAXESCONFIGURATION.REQUIREDNAME" | translate }}</div>
                                     </div>
                                 </div>
                             </div>
@@ -89,15 +98,6 @@
                             </div>
                             <div class="col-sm-12 col-md-4">
                                 <div class="form-group">
-                                    <label>{{ "ADMINISTRATION.COLLECTION.COIN" | translate }}</label>
-                                    <input type="text" formControlName="xmoneda" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('xmoneda').errors }">
-                                    <div *ngIf="submitted && detail_form.get('xmoneda').errors"  class="invalid-feedback">
-                                        <div *ngIf="detail_form.get('xmoneda').errors.required">{{ "CONFIGURATION.TAXESCONFIGURATION.REQUIREDNAME" | translate }}</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-12 col-md-4">
-                                <div class="form-group">
                                     <label>{{ "ADMINISTRATION.COLLECTION.PREMIUM" | translate }}</label>
                                     <input type="text" formControlName="mprima" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('mprima').errors }">
                                     <div *ngIf="submitted && detail_form.get('mprima').errors"  class="invalid-feedback">
@@ -115,9 +115,9 @@
                                 </div>
                             </div>
                             <br>
-                            <div class="col-6">
-                                <div style="margin: 31px -219px 99px 32px;">
-                                <button [disabled]="loading || loading_cancel" class="btn company-detail-button float-right mr-1" type="button" (click)="addPayment()" *ngIf="bpago">
+                            <div class="col-sm-12 mt-2">
+                                <div style="width: 463px;height: 48px;margin-left: 400px;margin-top: 10px;">
+                                <button [disabled]="loading || loading_cancel" class="btn company-detail-button btn-lg btn-block" type="button" (click)="addPayment()" *ngIf="bpago">
                                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                                     {{ "ADMINISTRATION.COLLECTION.ADDPAYMENT" | translate }}
                                 </button>
