--- a/src/app/administration/collection/collection-index/collection-index.component.html
+++ b/src/app/administration/collection/collection-index/collection-index.component.html
@@ -26,12 +26,10 @@
                         <div class="row">
                           <div class="col-sm-12 col-md-4">
                             <div class="form-group">
-                                <label>Placa</label>
-                                <select formControlName="xplaca" class="form-control" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xplaca').errors }">
-                                    <option></option>
-                                    <option *ngFor="let plate of plateList" value="{{ plate.id }}">{{ plate.value }}</option>
-                                </select>
+                                <label>{{ "ADMINISTRATION.COLLECTION.PLATE" | translate }}</label>
+                                <input type="text" formControlName="xplaca" class="form-control" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xplaca').errors }">
                                 <div *ngIf="submitted && search_form.get('xplaca').errors"  class="invalid-feedback">
+                                    <div *ngIf="search_form.get('xplaca').errors.required">{{ "CONFIGURATION.TAXESCONFIGURATION.REQUIREDNAME" | translate }}</div>
                                 </div>
                             </div>
                         </div>
