--- a/src/app/club/pages-statics/qsomos/qsomos.component.html
+++ b/src/app/club/pages-statics/qsomos/qsomos.component.html
@@ -44,7 +44,7 @@
 			</div>
 			<div class="col">
 				<div class="ratio ratio-16x9">
-          <video width="540" height="310" controls><source src="https://Mundial Autos.com.co/Mundial Autos/f_inicio/img/arys.mp4" type="video/mp4"></video>
+          <video width="540" height="310" controls><source src="https://arysauto.com.co/arysauto/f_inicio/img/arys.mp4" type="video/mp4"></video>
 				</div>
 			</div>
       </div>
@@ -56,15 +56,15 @@
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>Mundial Autos</h3>
+              <h3>Arys Auto</h3>
               <p>
    Av.Bolivar norte <br>
                 Centro comercial y profesional El Camoruco<br>Piso 9, oficina 01<br> Edo.Valencia<br>
                 <br><strong>Teléfono:</strong> <a href="https://api.whatsapp.com/send?phone=584144128237&text=Gracias%20por%20comunicarte%20con%20Arys%20Auto,%20en%20breves%20momentos%20te%20atenderemos">+584144128237 </a><br>
-                <strong>Correo:</strong> <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&to=siniestros@Mundial Autos.com">siniestros@Mundial Autos.com</a><br>
+                <strong>Correo:</strong> <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&to=siniestros@arysauto.com">siniestros@arysauto.com</a><br>
               </p>
               <div class="social-links d-flex mt-3">
-<a href="https://instagram.com/Mundial Autoss.vzla?igshid=YmMyMTA2M2Y=" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
+<a href="https://instagram.com/arysautos.vzla?igshid=YmMyMTA2M2Y=" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
               </div>
             </div>
           </div>
@@ -73,7 +73,7 @@
               <li><a href="inicio">Inicio</a></li>
               <li><a href="qsomos">Quienes Somos</a></li>
               <li><a href="service">Servicios</a></li>
-              <li><a href="./assets/pdf/Politica de privacidad Mundial Autos SAS.pdf">Términos y Condiciones</a></li>
+              <li><a href="./assets/pdf/Politica de privacidad Arysauto SAS.pdf">Términos y Condiciones</a></li>
             </ul>
           </div>
         </div>
@@ -82,7 +82,7 @@
     <div class="footer-legal text-center position-relative">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>Mundial Autos</span></strong>. Todos los Derechos Reservados
+          &copy; Copyright <strong><span>Arys Auto</span></strong>. Todos los Derechos Reservados
         </div>
         <div class="credits">
           Diseñado por Compuamerica
@@ -90,4 +90,3 @@
       </div>
     </div>
   </footer>
-  <div id="preloader"></div>
