--- a/src/app/club/pages-statics/contact/contact.component.html
+++ b/src/app/club/pages-statics/contact/contact.component.html
@@ -49,7 +49,7 @@
             <div class="info-item d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-envelope"></i>
               <h3>Nuestro Correo</h3>
-              <p><a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&to=siniestros@Mundial Autos.com">siniestros@Mundial Autos.com</a></p>
+              <p><a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&to=siniestros@arysauto.com">siniestros@arysauto.com</a></p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
@@ -61,8 +61,11 @@
           </div>
         </div>
         <div class="row gy-4 mt-1">
-          <div class="col-lg-6 ">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d476.42731078563014!2d-66.87657866888858!3d10.492660857972787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c2a58e1adee293f%3A0x1facc1476ae19c65!2sEdificio%20Rupi!5e0!3m2!1ses!2sve!4v1657541703361!5m2!1ses!2sve" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+          <div class="col-lg-6 "> 
+            <div class="imagen">
+              <img src="./../../../../assets/imagenes/arys/contacto.jpg" style="  box-shadow: 2px 2px 5px #999;width: 90%;border-radius: 15px;">
+            </div>
+            
           </div>
           <div class="col-lg-6">
             <form method="post" role="form">
@@ -94,15 +97,15 @@
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>Mundial Autos</h3>
+              <h3>Arys Auto</h3>
               <p>
    Av.Bolivar norte <br>
                 Centro comercial y profesional El Camoruco<br>Piso 9, oficina 01<br> Edo.Valencia<br>
                 <br><strong>Teléfono:</strong> <a href="https://api.whatsapp.com/send?phone=584144128237&text=Gracias%20por%20comunicarte%20con%20Arys%20Auto,%20en%20breves%20momentos%20te%20atenderemos">+584144128237 </a><br>
-                <strong>Correo:</strong> <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&to=siniestros@Mundial Autos.com">siniestros@Mundial Autos.com</a><br>
+                <strong>Correo:</strong> <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&to=siniestros@arysauto.com">siniestros@arysauto.com</a><br>
               </p>
               <div class="social-links d-flex mt-3">
-<a href="https://instagram.com/Mundial Autoss.vzla?igshid=YmMyMTA2M2Y=" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
+<a href="https://instagram.com/arysautos.vzla?igshid=YmMyMTA2M2Y=" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
               </div>
             </div>
           </div>
@@ -111,7 +114,7 @@
               <li><a href="inicio">Inicio</a></li>
               <li><a href="qsomos">Quienes Somos</a></li>
               <li><a href="service">Servicios</a></li>
-              <li><a href="./assets/pdf/Politica de privacidad Mundial Autos SAS.pdf">Términos y Condiciones</a></li>
+              <li><a href="./assets/pdf/Politica de privacidad Arysauto SAS.pdf">Términos y Condiciones</a></li>
             </ul>
           </div>
         </div>
@@ -121,7 +124,7 @@
     <div class="footer-legal text-center position-relative">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>Mundial Autos</span></strong>. Todos los Derechos Reservados
+          &copy; Copyright <strong><span>Arys Auto</span></strong>. Todos los Derechos Reservados
         </div>
         <div class="credits">
           Diseñado por Compuamerica
@@ -129,7 +132,6 @@
       </div>
     </div>
   </footer>
-  <div id="preloader"></div>
   <script src="./styles_Club/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="./styles_Club/vendor/aos/aos.js"></script>
   <script src="./styles_Club/vendor/glightbox/js/glightbox.min.js"></script>
