--- a/src/app/club/register/register.component.html
+++ b/src/app/club/register/register.component.html
@@ -48,17 +48,20 @@
                           </div>
                           </div>
                         </div>
+
+                        <div class="col-md-6 mb-4 pb-2">
+                          <div class="form-outline">
+                           <label class="form-label" for="form3Examplev4">fecha de nacimiento</label>
+                           <input type="date" formControlName="fnacimiento" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('fnacimiento').errors }"/>
+                           <div *ngIf="submitted && search_form.get('fnacimiento').errors"  class="invalid-feedback">
+                             <div *ngIf="search_form.get('fnacimiento').errors.required">{{ "THIRDPARTIES.ASSOCIATES.REQUIREDDOCUMENTTYPE" | translate }}</div>
+                           </div>
+                         </div>
+                       </div>
+                       
                       </div>
 
-                     <div class="col-md-6 mb-4 pb-2">
-                       <div class="form-outline">
-                        <label class="form-label" for="form3Examplev4">fecha de nacimiento</label>
-                        <input type="date" formControlName="fnacimiento" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('fnacimiento').errors }"/>
-                        <div *ngIf="submitted && search_form.get('fnacimiento').errors"  class="invalid-feedback">
-                          <div *ngIf="search_form.get('fnacimiento').errors.required">{{ "THIRDPARTIES.ASSOCIATES.REQUIREDDOCUMENTTYPE" | translate }}</div>
-                        </div>
-                      </div>
-                    </div>
+
 
                     
 
@@ -155,7 +158,7 @@
                     <div class="form-check d-flex justify-content-start mb-4 pb-3">
                       <input class="form-check-input me-3" type="checkbox" value="" id="form2Example3c" />
                       <label class="form-check-label text-white" for="form2Example3">
-                        Acepto los <a href="./../../../assets/pdf/Politica de privacidad Mundial Autos SAS.pdf" class="text-white"><u>Terminos y Condiciones</u></a> de su sitio web.
+                        Acepto los <a href="./../../../assets/pdf/Politica de privacidad Arysauto SAS.pdf" class="text-white"><u>Terminos y Condiciones</u></a> de su sitio web.
                       </label>
                     </div>
   
