add changes contract individual

--- a/src/app/club/pages-statics/services/services.component.html
+++ b/src/app/club/pages-statics/services/services.component.html
@@ -7,7 +7,7 @@
 <header id="header" class="header d-flex align-items-center">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
       <a href="inicio" class="image d-flex align-items-center">
-        <img src="./assets/imagenes/arys/image.png" style="max-height: 40px">
+        <img class="logocompany">
       </a>
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
@@ -204,21 +204,23 @@
       </div>
     </section>
   </main>
-  <footer id="footer" class="footer" style="background-image:url(./assets/imagenes/arys/planes.jpg)">
+  <footer id="footer" class="footer" style="background-image:url(./../../../../assets/imagenes/arys/planes.jpg); background-position: center;">
     <div class="footer-content position-relative">
       <div class="container">
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>Arys Auto</h3>
+              <h3>Mundial Autos</h3>
               <p>
-   Av.Bolivar norte <br>
-                Centro comercial y profesional El Camoruco<br>Piso 9, oficina 01<br> Edo.Valencia<br>
-                <br><strong>Teléfono:</strong> <a href="https://api.whatsapp.com/send?phone=584144128237&text=Gracias%20por%20comunicarte%20con%20Arys%20Auto,%20en%20breves%20momentos%20te%20atenderemos">+584144128237 </a><br>
-                <strong>Correo:</strong> <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&to=siniestros@arysauto.com">siniestros@arysauto.com</a><br>
+                Av. Francisco de Miranda, <br>
+                Edif. Cavendes, Piso 11 OF 1101
+Urb. Los Palos Grandes,<br>1060 Chacao,<br>Caracas.<br>
+                <br><strong>Teléfono:</strong> <a href="https://api.whatsapp.com/send?phone=584242061351&text=Gracias%20por%20comunicarte%20con%20La%20Mundial,%20en%20breves%20momentos%20te%20atenderemos">+584242061351 </a><br>
+                <strong>Teléfono:</strong><a href="tel:02122839619"> +58 212 283-9619</a>
+                <br><strong>Correo:</strong> <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&to=info@lamundialdeseguros.com">info@lamundialdeseguros.com</a><br>
               </p>
               <div class="social-links d-flex mt-3">
-<a href="https://instagram.com/arysautos.vzla?igshid=YmMyMTA2M2Y=" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.instagram.com/lamundialseguros/" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
               </div>
             </div>
           </div>
@@ -226,9 +228,7 @@
             <ul>
               <li><a href="inicio">Inicio</a></li>
               <li><a href="qsomos">Quienes Somos</a></li>
-              <li><a href="service">Servicios</a></li>
-              <li><a href="./assets/pdf/Politica de privacidad Arysauto SAS.pdf">Términos y Condiciones</a></li>
-            </ul>
+    <!---->             </ul>
           </div>
         </div>
       </div>
@@ -237,7 +237,7 @@
     <div class="footer-legal text-center position-relative">
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>Arys Auto</span></strong>. Todos los Derechos Reservados
+          &copy; Copyright <strong><span>Mundial Autos</span></strong>. Todos los Derechos Reservados
         </div>
         <div class="credits">
           Diseñado por Compuamerica
