--- a/src/styles_Club/css/main.css
+++ b/src/styles_Club/css/main.css
@@ -1654,7 +1654,7 @@ section {
   line-height: 0;
   color: var(--color-primary);
   border-radius: 50%;
-  border: 2px dotted #ffd565;
+  border: 2px dotted #0456ff;
 }
 
 .contact .info-item h3 {
