--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 
 
 
-<nav class="navbar navbar-expand-lg company-bg-navbar" [ngClass]="{ 'navbar-light': theme == 'light', 'navbar-dark': theme == 'dark' }">
+<div class="navbar navbar-expand-lg company-bg-navbar" [ngClass]="{ 'navbar-light': theme == 'light', 'navbar-dark': theme == 'dark' }">
   <a  *ngIf="auth" href="home"><img src="./assets/imagenes/mundial-logo2.png" width="150" height="60"></a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,4 +33,4 @@
         </form>
     </ul>
   </div>
-</nav>
+</div>
