--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,10 @@
 @import url(./styles_Club/vendor/swiper/swiper-bundle.min.css);
 @import url(./styles_Club/css/main.css);
 
+
+
+/* Colores y logos de las paginas */
+
 .card-header{
     background-color:#CCDBFC;
 }
@@ -14,4 +18,15 @@
     border-color:white;
     color: white;
 }
+
+.logocompany{
+    background: url("./assets/imagenes/mundial-logo2.png") no-repeat;
+    background-size: contain;
+    padding: 83px;
+  }
+
+nav{
+    margin-top: -54px;
+}
+
 
